# Hackathon-QuickStart-template

./: README.md  bin_list.txt  node_modules_list.txt
projects/contracts/: pyproject.toml
projects/contracts/smart_contracts/: __main__.py
projects/contracts/smart_contracts/session_ledger/: contract.py  deploy_config.py
projects/frontend/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
projects/frontend/src/: App.tsx  Home.tsx
projects/frontend/src/components/: Account.tsx  ConnectWallet.tsx
projects/frontend/src/components/layout/: AppLayout.tsx  Navbar.tsx  Sidebar.tsx
projects/frontend/src/interfaces/: session.ts  sessionLedgerClient.ts
projects/frontend/src/pages/: OrganizerDashboard.tsx  StudentDashboard.tsx
projects/frontend/src/pages/admin/: AdminDashboard.tsx
projects/frontend/src/pages/organizer/: ActiveSession.tsx  CreateSession.tsx  SessionHistory.tsx
projects/frontend/src/pages/student/: StudentHistory.tsx  StudentScan.tsx
projects/frontend/src/utils/: anomaly_detection.ts
